--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
     "hbs": "~4.0.1",
+    "knex": "^0.14.2",
     "morgan": "~1.9.0",
+    "mysql": "^2.15.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
