--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "bookshelf": "^0.12.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv-safe": "^4.0.4",
