--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^4.0.1",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
+    "prettier": "^1.10.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "supertest": "^3.0.0",
